docs/api/qiskit/0.29/qiskit.circuit.library.CHGate.md
---
title: CHGate
description: API reference for qiskit.circuit.library.CHGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CHGate
---

# CHGate

<span id="qiskit.circuit.library.CHGate" />

`CHGate(label=None, ctrl_state=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/h.py "view source code")

Bases: `qiskit.circuit.controlledgate.ControlledGate`

Controlled-Hadamard gate.

Applies a Hadamard on the target qubit if the control is in the $\vert 1\rangle$ state.

**Circuit symbol:**

> **q\_0: ──■──**
>
> ┌─┴─┐
>
> **q\_1: ┤ H ├**
>
> └───┘

**Matrix Representation:**

$$
\begin{split}CH\ q_0, q_1 =
    I \otimes \vert 0\rangle\langle 0\vert  + H \otimes \vert 1\rangle\langle 1\vert  =
    \begin{pmatrix}
        1 & 0 & 0 & 0 \\
        0 & \frac{1}{\sqrt{2}} & 0 & \frac{1}{\sqrt{2}} \\
        0 & 0 & 1 & 0 \\
        0 & \frac{1}{\sqrt{2}} & 0 & -\frac{1}{\sqrt{2}}
    \end{pmatrix}\end{split}
$$

<Admonition title="Note" type="note">
  In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

  ```python
       ┌───┐
  q_0: ┤ H ├
       └─┬─┘
  q_1: ──■──
  ```

  $$
  \begin{split}CH\ q_1, q_0 =
      \vert 0\rangle\langle 0\vert  \otimes I + \vert 1\rangle\langle 1\vert  \otimes H =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 1 & 0 & 0 \\
          0 & 0 & \frac{1}{\sqrt{2}} & \frac{1}{\sqrt{2}} \\
          0 & 0 & \frac{1}{\sqrt{2}} & -\frac{1}{\sqrt{2}}
      \end{pmatrix}\end{split}
  $$
</Admonition>

Create new CH gate.

## Methods Defined Here

### inverse

<span id="qiskit.circuit.library.CHGate.inverse" />

`CHGate.inverse()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/h.py "view source code")

Return inverted CH gate (itself).

## Attributes

<span id="qiskit.circuit.library.CHGate.ctrl_state" />

### ctrl\_state

Return the control state of the gate as a decimal integer.

**Return type**

`int`

<span id="qiskit.circuit.library.CHGate.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.library.CHGate.definition" />

### definition

Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

**Return type**

`List`

<span id="qiskit.circuit.library.CHGate.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.library.CHGate.label" />

### label

Return instruction label

**Return type**

`str`

<span id="qiskit.circuit.library.CHGate.name" />

### name

Get name of gate. If the gate has open controls the gate name will become:

> \<original\_name\_o\<ctrl\_state>

where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

**Return type**

`str`

<span id="qiskit.circuit.library.CHGate.num_ctrl_qubits" />

### num\_ctrl\_qubits

Get number of control qubits.

**Returns**

The number of control qubits for the gate.

**Return type**

int

<span id="qiskit.circuit.library.CHGate.params" />

### params

Get parameters from base\_gate.

**Returns**

List of gate parameters.

**Return type**

list

**Raises**

**CircuitError** – Controlled gate does not define a base gate

<span id="qiskit.circuit.library.CHGate.unit" />

### unit

Get the time unit of duration.

